# universal-memory-service

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.example.yaml
skills/hermes/: skill.md
skills/openclaw/: Skill.md
src/universal_memory/: __init__.py  __main__.py  chunker.py  config.py  db.py  indexer.py  main.py  mcp_server.py  watcher.py
src/universal_memory/api/: routes.py
src/universal_memory/models/: __init__.py
src/universal_memory/retrieval/: __init__.py  bm25.py  embeddings.py  expander.py  graphiti.py  pipeline.py  reranker.py  vector_store.py
src/universal_memory/sync/: sync_engine.py
src/universal_memory/writers/: file_writer.py  graphiti_writer.py
tests/: test_api.py  test_chunker.py  test_config.py  test_db.py  test_file_writer.py  test_mcp_server.py  test_models.py  test_pipeline.py  test_security.py  test_sync_engine.py  test_watcher.py
